@@ -1,3 +1,7 @@
+2004-02-18  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
+	* shapeid.h: fixed uninitialised member variable
+	* mouse.cc: removed dynamic_cast
+
 2004-02-17  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 	* audio/midi_drivers/Makefile.am: add win_midiout.*
 
